Add marche nordique

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
             <div class="space-under">
 
-                <div class="services-cards">
-                    <div class="card text-center">
+                <div class="services-cards cards-particuliers">
+                    <div class="card text-center card-particulier">
                         <img src="img/therapeute.jpg" class="card-img-top" alt="Image therapeute">
                         <div class="card-header">
                             <h5>Entretien thérapeutique individuel pour adultes, adolescents et enfants</h5>
@@ -186,15 +186,15 @@
                         </div> -->
                     </div>
 
-                    <div class="card text-center">
+                    <div class="card text-center card-particulier">
                         <img src="img/famille.jpg" class="card-img-top" alt="Image guidance famille">
                         <div class="card-header">
-                            <h5>Guidance parentale pour une famille</h5>
+                            <h5>Entretiens familiaux</h5>
                             <p>séances d'1h</p>
                             <br>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">La guidance parentale permet de développer une meilleure qualité de la fonction parentale et à l'enfant de trouver sa place.</p>
+                            <p class="card-text">Les entretiens familiaux permettent de développer une meilleure qualité de la fonction parentale et à l'enfant de trouver sa place.</p>
 
                             <div class="text-center"
                                 style="margin-top: 1.5rem;">
@@ -229,6 +229,42 @@
                             <h4>80,00 €</h4>
                         </div> -->
                     </div>
+
+                    <div class="card text-center card-particulier">
+                        <img src="img/marche.jpg" class="card-img-top" alt="Image marche">
+                        <div class="card-header">
+                            <h5>Marche nordique</h5>
+                            <p>séances de 2h</p>
+                            <p>Chaque mardis soirs de 18h à 20h</p>
+                            <p>Groupe de 5 ou individuel</p>
+                            <br>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Marche nordique, meditation pleine conscience et temps de parole.</p>
+
+                            <div class="text-center"
+                                style="margin-top: 1.5rem;">
+                                <a type="button"
+                                    data-toggle="collapse"
+                                    data-target="#particuliers-details-gui_marche"><i style=" color: black; font-size: 28px;"
+                                        class="fa fa-angle-down"></i></a>
+                            </div>
+
+                            <div class="collapse" id="particuliers-details-gui_marche">
+                                <p style="text-align: justify">
+                                    Gestion de stress, angoisse et anxiété.
+                                </p>
+                                <p style="text-align: justify">
+
+                                </p>
+                            </div>
+
+                            <!-- <hr style="max-width: 5rem" /> -->
+                        </div>
+                        <!-- <div class="card-footer">
+                            <h4>80,00 €</h4>
+                        </div> -->
+                    </div>
                 </div>
 
             </div>
@@ -244,8 +280,8 @@
             <br />
             <br />
 
-            <div class="services-cards">
-                <div class="card card-tiny text-center">
+            <div class="services-cards cards-pros">
+                <div class="card card-tiny text-center card-pros">
                     <div class="card-header">
                         <h5>Supervision</h5>
                         <p>pendant 2h, pour max 5 professionnels</p>
@@ -261,7 +297,7 @@
                     </div> -->
                 </div>
 
-                <div class="card card-tiny text-center">
+                <div class="card card-tiny text-center card-pros">
                     <div class="card-header">
                         <h5>Analyse des pratiques professionnelles</h5>
                         <p>pendant 2h, pour max 5 professionnels</p>
@@ -291,7 +327,7 @@
                 </div>
 
 
-                <div class="card card-tiny text-center">
+                <div class="card card-tiny text-center card-pros">
                     <div class="card-header">
                         <h5>Régulation d'équipe</h5>
                         <p>pendant 2h, pour max 5 professionnels</p>
@@ -316,6 +352,25 @@
                             efficace.</p>
                             <p style="text-align: justify">Ensemble, une équipe est bien souvent meilleure que si chacun travaille seul. Mettre des mots sur les maux dans l’intérêt et le respect du tout à chacun!</p>
                         </div>-->
+
+                        <!-- <hr style="max-width: 5rem" /> -->
+                    </div>
+                    <!-- <div class="card-footer">
+                        <h4>A définir.</h4>
+                    </div> -->
+                </div>
+
+                <div class="card card-tiny text-center card-pros">
+                    <div class="card-header">
+                        <h5>Marche nordique</h5>
+                        <p>Groupe de 5 personnes</p>
+                        <p>1x/mois de 13h30 à 15h30</p>
+                        <br>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            Pour les pros de l'humain (soin, enseignement, éducation). Marche nordique, meditation pleine conscience et temps de parole. Gestion de stress, angoisse et anxiété.
+                        </p>
 
                         <!-- <hr style="max-width: 5rem" /> -->
                     </div>
