--- a/index.html
+++ b/index.html
@@ -254,9 +254,6 @@
                                 <p style="text-align: justify">
                                     Gestion de stress, angoisse et anxiété.
                                 </p>
-                                <p style="text-align: justify">
-
-                                </p>
                             </div>
 
                             <!-- <hr style="max-width: 5rem" /> -->
@@ -369,7 +366,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            Pour les pros de l'humain (soin, enseignement, éducation). Marche nordique, meditation pleine conscience et temps de parole. Gestion de stress, angoisse et anxiété.
+                            Pour les pros de l'humain (soin, enseignement, éducation). <br/>Marche nordique, meditation pleine conscience et temps de parole. Gestion de stress, angoisse et anxiété.
                         </p>
 
                         <!-- <hr style="max-width: 5rem" /> -->
