Fix horaire pros

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     <div class="card-header">
                         <h5>Marche nordique</h5>
                         <p>Groupe de 5 personnes</p>
-                        <p>1x/mois de 13h30 à 15h30</p>
+                        <p>1x/mois le samedi de 13h30 à 15h30</p>
                         <br>
                     </div>
                     <div class="card-body">
