Fix marche nordique et guidance parentale

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="intro-par">
                 <p>
                     Ré-Unir est un espace neutre de parole destiné aux particuliers (entretien individuel), aux
-                    familles (guidance parentale) et aux professionnels issus des domaines social, médico-social,
+                    familles (entretiens familiaux) et aux professionnels issus des domaines social, médico-social,
                     sanitaire, scolaire et du monde de l’entreprise (Analyse des pratiques professionnelles,
                     supervision et régulation d’équipe).
                 </p>
@@ -240,7 +240,7 @@
                             <br>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Marche nordique, meditation pleine conscience et temps de parole.</p>
+                            <p class="card-text">Marche nordique, méditation et temps de parole. Plus méditation pleine conscience.</p>
 
                             <div class="text-center"
                                 style="margin-top: 1.5rem;">
