--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             <br>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Marche nordique, méditation et temps de parole. Plus méditation pleine conscience.</p>
+                            <p class="card-text">Marche nordique, méditation et temps de parole.</p>
 
                             <div class="text-center"
                                 style="margin-top: 1.5rem;">
@@ -366,7 +366,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            Pour les pros de l'humain (soin, enseignement, éducation). <br/>Marche nordique, meditation pleine conscience et temps de parole. Gestion de stress, angoisse et anxiété.
+                            Pour les pros de l'humain (soin, enseignement, éducation). <br/>Marche nordique, méditation et temps de parole. Gestion de stress, angoisse et anxiété.
                         </p>
 
                         <!-- <hr style="max-width: 5rem" /> -->
@@ -440,7 +440,7 @@
                 <div class="col-md-8 col-sm-5"
                     style="text-align: justify">
                     <p>Ré-Unir est un espace de parole destiné aux particuliers (entretien individuel), aux familles
-                    (guidance parentale) et aux professionnels issus des domaines social, médico-social, sanitaire,
+                    (entretiens familiaux) et aux professionnels issus des domaines social, médico-social, sanitaire,
                     scolaire et du monde de l’entreprise (Analyse des pratiques professionnelles, supervision et
                     régulation d’équipe). Je suis une psychanalyste, membre d'une Fédération, superviseuse certifiée et une ancienne éducatrice spécialisée D.E.</p>
                     <p>Etant bilingue, j'ai choisi de m'installer à Roeschwoog, village proche de la frontière.</p>
