--- a/index.html
+++ b/index.html
@@ -396,15 +396,7 @@
                                 border="1">
                                 <tbody>
                                     <tr>
-                                        <td>Lundi</td>
-                                        <td>Fermé</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Mardi</td>
-                                        <td>18:00 - 20:00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Mercredi - Jeudi</td>
+                                        <td>Lundi - Jeudi</td>
                                         <td>Fermé</td>
                                     </tr>
                                     <tr>
@@ -413,7 +405,7 @@
                                     </tr>
                                     <tr>
                                         <td>Samedi</td>
-                                        <td>9:00 - 13:00</td>
+                                        <td>8:00 - 13:00</td>
                                     </tr>
                                     <tr>
                                         <td>Dimanche</td>
