Add paragraph on "Entretiens familiaux"

--- a/index.html
+++ b/index.html
@@ -218,8 +218,13 @@
                                     En Allemagne, j'ai accompagné des enfants de 0 à 6 ans en jardin d'enfants bilingue et de 11 à 16 ans en école privée spécialisée.
                                 </p>
                                 <p style="text-align: justify">
-                                    En qualité de psychanalyste, j'ai développé
-                                    l'écoute et la clinique.
+                                    En qualité de psychanalyste, j'ai développé l'écoute et la clinique.
+                                </p>
+                                <p style="text-align: justify">
+                                    S'autoriser à exprimer ses difficultés et demander une aide  permet d'obtenir le regard extérieur d'un professionnel pour trouver ensemble des solutions.
+                                </p>
+                                <p style="text-align: justify">
+                                    Je propose une prévention éducative dans le but de soutenir la parentalité et une écoute analytique pour tenter d'apaiser les tensions.
                                 </p>
                             </div>
 
