Update Marche nordique to Psychamarche

--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
                     <div class="card text-center card-particulier">
                         <img src="img/marche.jpg" class="card-img-top" alt="Image marche">
                         <div class="card-header">
-                            <h5>Marche nordique</h5>
+                            <h5>Psychamarche</h5>
                             <p>séances de 2h</p>
                             <p>Chaque mardis soirs de 18h à 20h</p>
-                            <p>Groupe de 5 ou individuel</p>
+                            <p>Groupe de 5 personnes</p>
                             <br>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Marche nordique, méditation et temps de parole.</p>
+                            <p class="card-text">Psychamarche, méditation et temps de parole.</p>
 
                             <div class="text-center"
                                 style="margin-top: 1.5rem;">
@@ -258,7 +258,11 @@
                             <div class="collapse" id="particuliers-details-gui_marche">
                                 <p style="text-align: justify">
                                     Gestion de stress, angoisse et anxiété.
-                                </p>
+								</p>
+								<p style="text-align: justify">Concept innovant.</p>
+								<p style="text-align: justify">Titulaire d'un brevet fédéral de marche nordique et psychanalyste.</p>
+								<p style="text-align: justify">Je souhaite proposer un temps de séance thérapeutique et/ou de supervision original.</p>
+								<p style="text-align: justify">Allier l'effort, le grand air, l'écoute analytique, les temps de parole et la méditation pour clore la séance.</p>
                             </div>
 
                             <!-- <hr style="max-width: 5rem" /> -->
@@ -336,7 +340,10 @@
                         <br>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">La régulation permet d'éviter que chacun campe sur ses positions sans explications, provoquant frustrations et inefficacité collective.</p>
+                        <p class="card-text">
+							La régulation permet d'éviter que chacun campe sur ses positions sans explications, provoquant frustrations et inefficacité collective.
+
+						</p>
 
                         <!--<div class="text-center"
                             style="margin-top: 1.5rem;">
@@ -364,15 +371,19 @@
 
                 <div class="card card-tiny text-center card-pros">
                     <div class="card-header">
-                        <h5>Marche nordique</h5>
+                        <h5>Psychamarche</h5>
                         <p>Groupe de 5 personnes</p>
-                        <p>1x/mois le samedi de 13h30 à 15h30</p>
+                        <p>Les samedis de 13h30 à 15h30</p>
                         <br>
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            Pour les pros de l'humain (soin, enseignement, éducation). <br/>Marche nordique, méditation et temps de parole. Gestion de stress, angoisse et anxiété.
-                        </p>
+							Pour les pros de l'humain (soin, enseignement, éducation). <br/><br/>
+							Gestion de stress et anxiété. <br/>
+							Remobiliser les processus créatifs. <br/>
+							Prendre un temps pour soi. <br/><br/>
+							Offrir un cadre différent en respectant les règles sanitaires usuelles.
+						</p>
 
                         <!-- <hr style="max-width: 5rem" /> -->
                     </div>
