Update horaires psychamarche

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <div class="card-header">
                             <h5>Psychamarche</h5>
                             <p>séances de 2h</p>
-                            <p>Chaque mardis soirs de 18h à 20h</p>
+                            <p>Lundi, mercredi de 18h30 à 20h30 <br/>et le samedi de 15h à 17h <br/>(jusqu'à la fin de l'été)</p>
                             <p>Groupe de 5 personnes</p>
                             <br>
                         </div>
