--- a/index.html
+++ b/index.html
@@ -239,13 +239,14 @@
                         <img src="img/marche.jpg" class="card-img-top" alt="Image marche">
                         <div class="card-header">
                             <h5>Psychamarche</h5>
-                            <p>séances de 2h</p>
-                            <p>Lundi, mercredi de 18h30 à 20h30 <br/>et le samedi de 15h à 17h <br/>(jusqu'à la fin de l'été)</p>
-                            <p>Groupe de 5 personnes</p>
+                            <p>Lundi et mercredi de 18h30 à 20h30 <br/>et le samedi de 14h30 à 16h30 <br/>(jusqu'à la fin de l'été)</p>
+							<p>Au Gros Chêne à Haguenau.</p>
+                            <p>Participation symbolique de 10€ pour 2h.</p>
+							<p>Groupe de 8 personnes.</p>
                             <br>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Psychamarche, méditation et temps de parole.</p>
+                            <p class="card-text">Marche nordique, temps de parole et relaxation.</p>
 
                             <div class="text-center"
                                 style="margin-top: 1.5rem;">
@@ -256,20 +257,19 @@
                             </div>
 
                             <div class="collapse" id="particuliers-details-gui_marche">
-                                <p style="text-align: justify">
-                                    Gestion de stress, angoisse et anxiété.
+								<p style="text-align: justify">
+                                    Sur inscription au <a href="tel:+33661397080" target="_blank">06.61.39.70.80</a>.
 								</p>
-								<p style="text-align: justify">Concept innovant.</p>
-								<p style="text-align: justify">Titulaire d'un brevet fédéral de marche nordique et psychanalyste.</p>
-								<p style="text-align: justify">Je souhaite proposer un temps de séance thérapeutique et/ou de supervision original.</p>
-								<p style="text-align: justify">Allier l'effort, le grand air, l'écoute analytique, les temps de parole et la méditation pour clore la séance.</p>
+                                <p style="text-align: justify">
+                                    Activité découverte en vue de valider le Brevet Fédéral de Marche Nordique en septembre et d'évaluer ensemble la pertinence actuelle de ce projet "après confinement" durant tout l'été 2020.
+								</p>
                             </div>
 
-                            <!-- <hr style="max-width: 5rem" /> -->
+                            <hr style="max-width: 5rem" />
                         </div>
-                        <!-- <div class="card-footer">
-                            <h4>80,00 €</h4>
-                        </div> -->
+                        <div class="card-footer">
+                            <h4>10,00 €/2h</h4>
+                        </div>
                     </div>
                 </div>
 
@@ -499,7 +499,7 @@
                 
                 <p>Audrey Bauerlé.</p>
 
-                <p>Sur rendez vous au numéro : <a href="tel:+33661397080" target="_blank">06.61.39.70.80</a></p>
+                <p>Sur rendez vous au numéro : <a href="tel:+33661397080" target="_blank">06.61.39.70.80</a>.</p>
                 
                 <div class="text-center"
                     style="margin-top: 1.5rem;">
