--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <h3 style="color: white">Un espace de parole.</h3>
                             <p>à Rœschwoog</p>
                             <hr style="max-width: 5rem" />
-                            <p>Audrey Bauerlé • Psychanalyste</p>
+                            <p>Audrey Bauerlé • Psychanalyste • Éducatrice spécialisée DE</p>
                             <a href="#contact"
                                 class="btn btn-appoint">Contact</a>
                         </div>
