--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 <div class="space-under">
                     <div style="display: flex; justify-content: space-between; align-content: left;" class="wrap-mobile">
                         <div style="padding: 15px; width: 100%;">
-                            <p style="text-align: justify">La Psychamarche a été créee durant le confinement et mis en application dès la sortie.</p>
+                            <p style="text-align: justify">La Psychamarche a été créée durant le confinement et mis en application dès la sortie.</p>
                             <p style="text-align: justify">C'est un accompagnement en 3 temps: pratique de la marche nordique, groupe de parole, relaxation mentale.</p>
                             <br/>
                             <p style="text-align: justify"><b><u>Objectif:</u> prévention santé, maintien du lien social, rencontre et parole.</b></p>
