--- a/index.html
+++ b/index.html
@@ -434,21 +434,64 @@
                 <br /><br />
                 <div class="space-under">
                     <div style="display: flex; justify-content: space-between; align-content: left;" class="wrap-mobile">
-                        <div style="padding: 15px; width: 100%;">
+                        <div style="padding: 20px; width: 100%;">
                             <p style="text-align: justify">La Psychamarche a été créée durant le confinement et mis en application dès la sortie.</p>
                             <p style="text-align: justify">C'est un accompagnement en 3 temps: pratique de la marche nordique, groupe de parole, relaxation mentale.</p>
                             <br/>
                             <p style="text-align: justify"><b><u>Objectif:</u> prévention santé, maintien du lien social, rencontre et parole.</b></p>
                             <p style="text-align: justify">La marche nordique est un sport complet au multiples bienfaits pour le corps et le moral. Accessibles à tous les niveaux sportifs. </p>
 
-<p style="text-align: justify">Le groupe de parole ou l'analyse des pratiques professionnelles permet une prise de distance, une remobilisation du processus créatif et fédére. </p>
-<p style="text-align: justify">La relaxation mentale permet le relâchement et la détente en profondeur. </p>
+                            <p style="text-align: justify">Le groupe de parole ou l'analyse des pratiques professionnelles permet une prise de distance, une remobilisation du processus créatif et fédére. </p>
+                            <p style="text-align: justify">La relaxation mentale permet le relâchement et la détente en profondeur. </p>
 
-<p style="text-align: justify">Une formule 3 en 1 qui mérite d'exister.</p>
+                            <p style="text-align: justify">Une formule 3 en 1 qui mérite d'exister.</p>
+                            <br/>
+                            <p>L'animatrice est une psychanalyste, superviseuse et éducatrice specialisee DE, titulaire de l'AF2 en MN.</p>
+                            <p>Supervisée elle même, cette activité innovante n'est pas une promenade où l'on bavarde mais une activité sérieuse, structurée et un nouvel outil à visée thérapeutique.</p>
                         </div>
 
-                        <div style="padding: 15px; width: 100%;">
-                            <p>Insérer du contenu</p>
+                        <div style="padding: 20px; width: 100%; border-left: 2px solid rgb(170, 170, 170); background-color: rgb(236, 236, 236);">
+                            <h5 style="margin-top:0;">Matériel</h5>
+                            <ul id="materiel-psychamarche">
+                                <li>Tenue de sport (adaptée à la marche nordique),</li>
+                                <li>Bâtons de marche (nordique),</li>
+                                <li>Sac à dos avec :</li>
+                                <ul>
+                                    <li>Bouteille d'eau,</li>
+                                    <li>Goûter sucré,</li>
+                                    <li>Serviette pour s'allonger,</li>
+                                    <li>Stylo.</li>
+                                </ul>
+                            </ul>
+
+                            <h5 style="margin-top: 20px;">Participation</h5>
+                            <p>20 €/pers pour 2h/2h30 d'accompagnement.</p>
+                            <p>Maximum 10 personnes.</p>
+
+                        </div>
+                    </div>
+
+                    <br/>
+                    <h5>Séances</h5>
+
+                    <div style="padding: 20px;">
+                        <b>Particuliers :</b>
+                        <p>Les mercredis de 17h30 à 20h au <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">gros chêne de Haguenau</a>.</p>
+                        <br/>
+                        
+                        <b>Entreprises, services ou institutions :</b>
+                        <p>Les vendredis, <a href="#contact">me contacter</a>.</p>
+                        <br/>
+                        
+                        <b>Professionnels du social, medico social, sanitaire, scolaire :</b>
+                        <p>Chaque samedi de 14h30 à 17h.</p>
+                        <div style="display: flex; justify-content: space-between; align-content: left;" class="wrap-mobile">
+                            <div style="padding: 15px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
+                                <p>Lieu 1</p>
+                            </div>
+                            <div style="padding: 15px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
+                                <p>Lieu 2</p>
+                            </div>
                         </div>
                     </div>
 
