Ajout des lieux

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                             </ul>
 
                             <h5 style="margin-top: 20px;">Participation</h5>
-                            <p>20 €/pers pour 2h/2h30 d'accompagnement.</p>
+                            <p><b>20 €/pers</b> pour 2h/2h30 d'accompagnement.</p>
                             <p>Maximum 10 personnes.</p>
 
                         </div>
@@ -476,21 +476,43 @@
 
                     <div style="padding: 20px;">
                         <b>Particuliers :</b>
-                        <p>Les mercredis de 17h30 à 20h au <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">gros chêne de Haguenau</a>.</p>
+                        <p>Les mercredis de 17h30 à 20h au <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Gros Chêne de Haguenau</a>.</p>
                         <br/>
                         
                         <b>Entreprises, services ou institutions :</b>
                         <p>Les vendredis, <a href="#contact">me contacter</a>.</p>
                         <br/>
-                        
+
                         <b>Professionnels du social, medico social, sanitaire, scolaire :</b>
-                        <p>Chaque samedi de 14h30 à 17h.</p>
+                        <p>Chaque samedi de 14h à 17h30.</p>
                         <div style="display: flex; justify-content: space-between; align-content: left;" class="wrap-mobile">
-                            <div style="padding: 15px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
-                                <p>Lieu 1</p>
+                            <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
+                                <p>
+                                    <b>1er samedi du mois :</b>
+                                    <br/>
+                                    <a href="https://goo.gl/maps/oyw41MUxC6YpdZkB9" target="_blank">Parc Vita <br/>à Colmar</a>
+                                </p>
                             </div>
-                            <div style="padding: 15px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
-                                <p>Lieu 2</p>
+                            <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
+                                <p>
+                                    <b>2ème samedi du mois :</b>
+                                    <br/>
+                                    <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Forêt de la Wantzenau <br/>à Strasbourg</a>
+                                </p>
+                            </div>
+                            <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
+                                <p>
+                                    <b>3ème samedi du mois :</b>
+                                    <br/>
+                                    <a href="" target="_blank">Forêt du Gros Chène <br/>à Haguenau</a>
+                                </p>
+                            </div>
+                            <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
+                                <p>
+                                    <b>4ème samedi du mois :</b>
+                                    <br/>
+                                    <a href="" target="_blank">Parc naturel de la Sauer Munschausen <br/>(région Lauterbourg-Wissembourg)</a>
+                                </p>
                             </div>
                         </div>
                     </div>
