--- a/index.html
+++ b/index.html
@@ -488,30 +488,30 @@
                         <div style="display: flex; justify-content: space-between; align-content: left;" class="wrap-mobile">
                             <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
                                 <p>
-                                    <b>1er samedi du mois :</b>
-                                    <br/>
+                                    <span>1er samedi du mois :</span>
+                                    <br/><br/>
                                     <a href="https://goo.gl/maps/oyw41MUxC6YpdZkB9" target="_blank">Parc Vita <br/>à Colmar</a>
                                 </p>
                             </div>
                             <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
                                 <p>
-                                    <b>2ème samedi du mois :</b>
-                                    <br/>
-                                    <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Forêt de la Wantzenau <br/>à Strasbourg</a>
+                                    <span>2ème samedi du mois :</span>
+                                    <br/><br/>
+                                    <a>Forêt de la Wantzenau <br/>à Strasbourg</a>
                                 </p>
                             </div>
                             <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
                                 <p>
-                                    <b>3ème samedi du mois :</b>
-                                    <br/>
-                                    <a href="" target="_blank">Forêt du Gros Chène <br/>à Haguenau</a>
+                                    <span>3ème samedi du mois :</span>
+                                    <br/><br/>
+                                    <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Forêt du Gros Chène <br/>à Haguenau</a>
                                 </p>
                             </div>
                             <div style="display: table-cell; padding: 10px; margin: 5px; width: 100%; border: 1px solid rgb(170, 170, 170); background-color: rgb(230, 230, 230);">
                                 <p>
-                                    <b>4ème samedi du mois :</b>
-                                    <br/>
-                                    <a href="" target="_blank">Parc naturel de la Sauer Munschausen <br/>(région Lauterbourg-Wissembourg)</a>
+                                    <span>4ème samedi du mois :</span>
+                                    <br/><br/>
+                                    <a>Parc naturel de la Sauer Munschausen <br/>(région Lauterbourg-Wissembourg)</a>
                                 </p>
                             </div>
                         </div>
