Fix matériel psychamarche

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                                 <ul>
                                     <li>Bouteille d'eau,</li>
                                     <li>Goûter sucré,</li>
-                                    <li>Serviette pour s'allonger,</li>
+                                    <li>Serviette (pour s'allonger),</li>
                                     <li>Stylo.</li>
                                 </ul>
                             </ul>
