--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 
                 <img src="img/marche.jpg" class="card-img-top" alt="Image marche">
                 <br /><br />
-                <div class="space-under">
+                <div>
                     <div style="display: flex; justify-content: space-between; align-content: left;" class="wrap-mobile">
                         <div style="padding: 20px; width: 100%;">
                             <p style="text-align: justify">La Psychamarche a été créée durant le confinement et mis en application dès la sortie.</p>
@@ -474,7 +474,7 @@
                     <br/>
                     <h5>Séances</h5>
 
-                    <div style="padding: 20px;">
+                    <div style="padding: 20px; padding-bottom: 0;">
                         <b>Particuliers :</b>
                         <p>Les mercredis de 17h30 à 20h au <a href="https://goo.gl/maps/121r67dBtCKPdDh49" target="_blank">Gros Chêne de Haguenau</a>.</p>
                         <br/>
@@ -516,7 +516,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </section>
     </section>
