Little fix on "Qui suis-je ?"

--- a/index.html
+++ b/index.html
@@ -134,12 +134,10 @@
             <div class="quisuisje-par">
                 <p>Bonjour,</p>
 
-                <p>Je suis une professionnelle dans l'accompagnement éducatif, pédagogique, scolaire et thérapeutique depuis 1999.</p>
-                <p>J'ai démarré en qualité d'auxiliaire d'intégration scolaire pour ensuite pour suivre mon cursus en qualité d'éducatrice spécialisée Diplômée d'Etat, superviseuse certifiée Psychasoc et Psychanalyste.</p>
-                <p>Actuellement, je termine des études universitaire en médecine et je suis membre de l'école psychanalytique européenne de Strasbourg.</p>
-                <p>Salariée à 80% dans une école spécialisée auprès d'adolescents en Allemagne.
-                    <br/>
-                Je termine également un Brevet Fédéral en Marche Nordique.
+                <p>Je suis une professionnelle dans l'accompagnement éducatif, pédagogique, scolaire et/ou thérapeutique depuis 1999.</p>
+                <p>J'ai démarré en qualité d'auxiliaire d'intégration scolaire pour ensuite poursuivre mon cursus professionnel en qualité d'éducatrice spécialisée Diplômée d'Etat, superviseuse certifiée Psychasoc et Psychanalyste.</p>
+                <p>Actuellement, je termine un Diplôme Universitaire en Médecine et je suis membre de la Fédération Européenne De Psychanalyse de Strasbourg (FEDEPSY).</p>
+                <p>Je suis salariée à 80 % dans une école spécialisée auprès d'adolescents de 12 à 18 ans en Allemagne et je termine un Brevet Fédéral en Marche Nordique.
                 <br/>
                 Ainsi, j'ai une longue expérience auprès d'enfants, d'adolescents et d'adultes en difficultés sociale ou psychique. </p>
 
@@ -147,7 +145,7 @@
                 <p>Dans un processus de formation continue, je cherche toujours à être au plus juste et à la page des problématiques actuelles. </p>
 
                 <p>À bientôt, 
-                <br/>Audrey Bauerlé </p>
+                <br/>Audrey Bauerlé</p>
             </div>
         </div>
     </section>
