--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                 <p>Actuellement, je termine un Diplôme Universitaire en Médecine et je suis membre de la Fédération Européenne De Psychanalyse de Strasbourg (FEDEPSY).</p>
                 <p>Je suis salariée à 80 % dans une école spécialisée auprès d'adolescents de 12 à 18 ans en Allemagne et je termine un Brevet Fédéral en Marche Nordique.
                 <br/>
-                Ainsi, j'ai une longue expérience auprès d'enfants, d'adolescents et d'adultes en difficultés sociale ou psychique. </p>
+                Ainsi, j'ai une longue expérience professionnelle auprès d'enfants (0-10), d'adolescents (10-21) et adultes en difficultés sociale, familiale, scolaire et/ou psychique. </p>
 
-                <p>D'une nature passionnée et engagée, j'ai choisi de devenir psychanalyste pour être au plus près de la parole et de ses effets dans l'idée d'être là et tenter d'accompagner au mieux les singularités humaines. </p>
+                <p>D'une nature passionnée et engagée, j'ai choisi de devenir une psychanalyste pour être au plus près de la parole et de ses effets. Étre là et tenter d'accompagner au mieux les singularités humaines. Je suis dialectophone et bilingue.</p>
                 <p>Dans un processus de formation continue, je cherche toujours à être au plus juste et à la page des problématiques actuelles. </p>
 
                 <p>À bientôt, 
