--- a/index.html
+++ b/index.html
@@ -430,11 +430,11 @@
                 <div>
                     <div style="display: flex; justify-content: space-between; align-content: left;" class="wrap-mobile">
                         <div style="padding: 20px; width: 100%;">
-                            <p style="text-align: justify">La Psychamarche a été créée durant le confinement et mis en application dès la sortie.</p>
-                            <p style="text-align: justify">C'est un accompagnement en 3 temps: pratique de la marche nordique, groupe de parole, relaxation mentale.</p>
+                            <p style="text-align: justify">Créée et mise en route dès la sortie du confinement.</p>
+                            <p style="text-align: justify">C'est un accompagnement en 3 temps : pratique de la marche nordique, groupe de parole, relaxation mentale.</p>
                             <br/>
                             <p style="text-align: justify"><b><u>Objectif:</u> prévention santé, maintien du lien social, rencontre et parole.</b></p>
-                            <p style="text-align: justify">La marche nordique est un sport complet au multiples bienfaits pour le corps et le moral. Accessibles à tous les niveaux sportifs. </p>
+                            <p style="text-align: justify">La marche nordique est un sport complet aux multiples bienfaits pour le corps et l'esprit. Accessibles à tous les niveaux sportifs. </p>
 
                             <p style="text-align: justify">Le groupe de parole ou l'analyse des pratiques professionnelles permet une prise de distance, une remobilisation du processus créatif et fédére. </p>
                             <p style="text-align: justify">La relaxation mentale permet le relâchement et la détente en profondeur. </p>
