Fix pros services title

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
                 <div class="card card-tiny text-center card-pros">
                     <div class="card-header">
-                        <h5>Analyse des pratiques professionnelles</h5>
+                        <h5>Analyse pratique</h5>
                         <br>
                     </div>
                     <div class="card-body">
@@ -362,7 +362,7 @@
 
                 <div class="card card-tiny text-center card-pros">
                     <div class="card-header">
-                        <h5>Régulation d'équipe</h5>
+                        <h5>Régulation</h5>
                         <br>
                     </div>
                     <div class="card-body">
